--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="header-content">
         <h1>Teknolojik Yemekler</h1>
   </div>
-    <div class="overlay">
+    <div class="ustmenu">
       <h2>fırsatı kaçırma</h2>
       <h1>KOD ACIKTIRIR</h1>
       <h1>PİZZA, DOYURUR</h1>
